# socksmith

./: .gitignore  CHANGELOG.md  Makefile  PLAN.md  README.md  pyproject.toml  socks.py
.github/workflows/: ci.yml  publish.yml
socksmith/: __init__.py  _exceptions.py  _globals.py  _http.py  _socket.py  _socks4.py  _socks5.py  _types.py  _utils.py
tests/: conftest.py  test_compat.py  test_http.py  test_socks4.py  test_socks5.py  test_socksocket.py
