[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "socksmith"
version = "0.1.0"
description = "Modern drop-in replacement for PySocks — SOCKS and HTTP proxy client"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [{ name = "Agentine" }]
keywords = ["socks", "proxy", "socks5", "socks4", "http-connect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/agentine/socksmith"
Repository = "https://github.com/agentine/socksmith"
Issues = "https://github.com/agentine/socksmith/issues"

[tool.hatch.build.targets.wheel]
packages = ["socksmith"]

[tool.hatch.build.targets.wheel.force-include]
"socks.py" = "socks.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
